--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>eMercado - Todo lo que busques está aquí</title>
-  
+
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
@@ -17,10 +17,21 @@
 </head>
 
 <body>
-  <main class="mt-5">
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+  <h1 class="site-header" id="inicio">Bienvenido</h1>
+  <div class="divcentrar">
+    <img src="img/login.png" alt="Login image" height="300px">
+  </div>
+  <main class=>
+    <div class="signin">
+      <div class="form-group" role="alert">
+        <label for="usuario" class="form-control">usuario:
+          <input type="text" name="user" class="form-control" id="user" required></label>
+        <label for="contraseña" class="form-control">contraseña:
+          <input type="text" name="password" class="form-control" id="password" required></label>
+        <input type="checkbox" id="checkbox"> recordar usuario
+        <div class="divcentrar">
+          <br> <button id="boton" class="btn btn-primary">Enviar</button>
+        </div>
       </div>
     </div>
   </main>
@@ -29,7 +40,8 @@
       <p class="float-end">
         <a href="#">Volver arriba</a>
       </p>
-      <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a></p>
+      <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a>
+      </p>
     </div>
   </footer>
   <script src="js/login.js"></script>
