--- a/products.html
+++ b/products.html
@@ -43,6 +43,40 @@
     </div>
     <div class="container">
       <div class="row">
+        <div class="col text-end">
+          <div class="btn-group btn-group-toggle mb-4" data-bs-toggle="buttons">
+            <input type="radio" class="btn-check" name="options" id="A-Z">
+            <label class="btn btn-light" for="A-Z">A-Z</label>
+            <input type="radio" class="btn-check" name="options" id="Z-A">
+            <label class="btn btn-light" for="Z-A">Z-A</label>
+            <input type="radio" class="btn-check" name="options" id="porCantidad" checked>
+            <label class="btn btn-light" for="porCantidad"><i class="fas fa-sort-amount-down mr-1"></i></label>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-6 offset-lg-6 col-md-12 mb-1 container">
+          <div class="row container p-0 m-0">
+            <div class="col">
+              <p class="font-weight-normal text-end my-2">Cant.</p>
+            </div>
+            <div class="col">
+              <input class="form-control" type="number" placeholder="min." id="filtroRangoMin">
+            </div>
+            <div class="col">
+              <input class="form-control" type="number" placeholder="máx." id="filtroRangoMax">
+            </div>
+            <div class="col-3 p-0">
+              <div class="btn-group" role="group">
+                <button class="btn btn-light btn-block" id="filtroRango">Filtrar</button>
+                <button class="btn btn-link btn-sm" id="limpiarFiltroRango">Limpiar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    <div class="container">
+      <div class="row">
         <div class="list-group" id="products-list-container">
         </div>
       </div>
