--- a/products.html
+++ b/products.html
@@ -45,12 +45,12 @@
       <div class="row">
         <div class="col text-end">
           <div class="btn-group btn-group-toggle mb-4" data-bs-toggle="buttons">
-            <input type="radio" class="btn-check" name="options" id="A-Z">
-            <label class="btn btn-light" for="A-Z">A-Z</label>
-            <input type="radio" class="btn-check" name="options" id="Z-A">
-            <label class="btn btn-light" for="Z-A">Z-A</label>
+            <input type="radio" class="btn-check" name="options" id="MenorAMayor">
+            <label class="btn btn-light" for="MenorAMayor"><i class="fas fa-sort-amount-down mr-1"></i>$</label>
+            <input type="radio" class="btn-check" name="options" id="MayorAMenor">
+            <label class="btn btn-light" for="MayorAMenor"><i class="fas fa-sort-amount-up mr-1"></i>$</label>
             <input type="radio" class="btn-check" name="options" id="porCantidad" checked>
-            <label class="btn btn-light" for="porCantidad"><i class="fas fa-sort-amount-down mr-1"></i></label>
+            <label class="btn btn-light" for="porCantidad"><i class="fas fa-sort-amount-down mr-1"></i>Rel.</label>
           </div>
         </div>
       </div>
@@ -58,7 +58,7 @@
         <div class="col-lg-6 offset-lg-6 col-md-12 mb-1 container">
           <div class="row container p-0 m-0">
             <div class="col">
-              <p class="font-weight-normal text-end my-2">Precio:</p>
+              <p class="font-weight-normal text-end my-2">Precio</p>
             </div>
             <div class="col">
               <input class="form-control" type="number" placeholder="min." id="filtroRangoMin">
