--- a/categories.html
+++ b/categories.html
@@ -58,6 +58,14 @@
         <div class="col-lg-6 offset-lg-6 col-md-12 mb-1 container">
           <div class="row container p-0 m-0">
             <div class="col">
+              <input class="form-control" type="search" placeholder="Buscar..." id="searchInput">
+            </div>
+            <div class="col-auto">
+              <button class="btn btn-primary" id="searchButton">Buscar</button>
+            </div>
+          </div>
+          <div class="row container p-0 m-0">
+            <div class="col">
               <p class="font-weight-normal text-end my-2">Cant.</p>
             </div>
             <div class="col">
@@ -74,7 +82,6 @@
             </div>
           </div>
         </div>
-      </div>
       <div class="row">
         <div class="list-group" id="cat-list-container">
         </div>
