Usuario en nav-bar para todos los documentos HTML

--- a/products.html
+++ b/products.html
@@ -31,6 +31,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="my-profile.html" id="username"></a>
           </li>
         </ul>
       </div>
@@ -102,6 +103,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/products.js"></script>
+  <script src="https://kit.fontawesome.com/11606f83bb.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
