--- a/sell.html
+++ b/sell.html
@@ -30,6 +30,7 @@
             <a class="nav-link active" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="my-profile.html" id="username"></a>
           </li>
         </ul>
       </div>
@@ -225,6 +226,7 @@
   <script src="js/dropzone.js"></script>
   <script src="js/init.js"></script>
   <script src="js/sell.js"></script>
+  <script src="https://kit.fontawesome.com/11606f83bb.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
