--- a/my-profile.html
+++ b/my-profile.html
@@ -45,6 +45,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="my-profile.html" id="username"></a>
           </li>
         </ul>
       </div>
@@ -68,6 +69,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/my-profile.js"></script>
+  <script src="https://kit.fontawesome.com/11606f83bb.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
