--- a/products.html
+++ b/products.html
@@ -62,10 +62,10 @@
               <p class="font-weight-normal text-end my-2">Precio</p>
             </div>
             <div class="col">
-              <input class="form-control" type="number" placeholder="min." id="filtroRangoMin">
+              <input class="form-control" min="0" type="number" placeholder="min." id="filtroRangoMin">
             </div>
             <div class="col">
-              <input class="form-control" type="number" placeholder="máx." id="filtroRangoMax">
+              <input class="form-control" min="0" type="number" placeholder="máx." id="filtroRangoMax">
             </div>
             <div class="col-3 p-0">
               <div class="btn-group" role="group">
