--- a/login.html
+++ b/login.html
@@ -52,8 +52,8 @@
             <div class="card-body">
               <h3 class="card-title text-center mb-4">Iniciar Sesión</h3>
               <div class="form-group py-2">
-                <label for="user">Usuario:</label>
-                <input type="text" name="user" id="user" class="form-control" required>
+                <label for="email">Usuario:</label>
+                <input type="email" name="email" id="email" class="form-control" required>
               </div>
               <div class="form-group py-2">
                 <label for="password">Contraseña:</label>
