--- a/categories.html
+++ b/categories.html
@@ -31,7 +31,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="my-profile.html" id="username"></a>
+            <a class="nav-link" href="my-profile.html" id="email"></a>
           </li>
         </ul>
       </div>
@@ -60,9 +60,6 @@
           <div class="row">
             <div class="col-8 col-md-8">
               <input class="form-control" type="search" placeholder="Buscar..." id="searchInput">
-            </div>
-            <div class="col-4 col-md-4">
-              <button class="btn btn-outline-dark" id="searchButton">Buscar</button>
             </div>
           </div>
         </div>
