--- a/my-profile.html
+++ b/my-profile.html
@@ -45,7 +45,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="my-profile.html" id="username"></a>
+            <a class="nav-link" href="my-profile.html" id="email"></a>
           </li>
         </ul>
       </div>
