--- a/products.html
+++ b/products.html
@@ -31,7 +31,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="my-profile.html" id="username"></a>
+            <a class="nav-link" href="my-profile.html" id="email"></a>
           </li>
         </ul>
       </div>
@@ -54,28 +54,35 @@
             <label class="btn btn-light" for="porCantidad"><i class="fas fa-sort-amount-down mr-1"></i>Rel.</label>
           </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-6 offset-lg-6 col-md-12 mb-1 container">
-          <div class="row container p-0 m-0">
-            <div class="col">
-              <p class="font-weight-normal text-end my-2">Precio</p>
+        <div class="row pt-2 pb-2">
+          <div class="col-12 col-md-5">
+            <div class="row">
+              <div class="col-8 col-md-8">
+                <input class="form-control" type="search" placeholder="Buscar..." id="searchInput">
+              </div>
             </div>
-            <div class="col">
-              <input class="form-control" min="0" type="number" placeholder="min." id="filtroRangoMin">
-            </div>
-            <div class="col">
-              <input class="form-control" min="0" type="number" placeholder="máx." id="filtroRangoMax">
-            </div>
-            <div class="col-3 p-0">
-              <div class="btn-group" role="group">
-                <button class="btn btn-light btn-block" id="filtroRango">Filtrar</button>
-                <button class="btn btn-link btn-sm" id="limpiarFiltroRango">Limpiar</button>
+          </div>
+          <div class="col-12 col-md-7">
+            <div class="row">
+              <div class="col-2 col-md-1">
+                <p class="font-weight-normal text-end my-2">Cant.</p>
+              </div>
+              <div class="col-5 col-md-3">
+                <input class="form-control" min="0" type="number" placeholder="min." id="filtroRangoMin">
+              </div>
+              <div class="col-5 col-md-3">
+                <input class="form-control" min="0" type="number" placeholder="máx." id="filtroRangoMax">
+              </div>
+          
+              <div class="col-12 col-md-5">
+                <div class="btn-group" role="group">
+                  <button class="btn btn-outline-dark" id="filtroRango">Filtrar</button>
+                  <button class="btn btn-outline-dark" id="limpiarFiltroRango">Limpiar</button>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
     <div class="container">
       <div class="row">
         <div class="list-group" id="products-list-container">
