se agrego visualizacion del producto

--- a/product-info.html
+++ b/product-info.html
@@ -38,11 +38,12 @@
     </div>
   </nav>
   <main>
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
-    </div>
+    <div class="container card pt-3 pb-3 mt-3">
+        <div class="row card-body">
+          <div class="col-12 col-md-6" id="prod-carrousel"></div>
+          <div class="col-12 col-md-6" id="prod-info"></div>
+        </div>
+     </div>
   </main>
   <footer class="text-muted">
     <div class="container">
