Cree urlCOMENTS para generar la concatenacion de variables para traer los comentarios para cada id, realizé la funcion showComents para realizar una solicitud GET a la urlCOMENTS, y luego cree el ciclo for para iterar para cada comentario y mostrarlo en cada producto

--- a/product-info.html
+++ b/product-info.html
@@ -42,6 +42,7 @@
         <div class="row card-body">
           <div class="col-12 col-md-6" id="prod-carrousel"></div>
           <div class="col-12 col-md-6" id="prod-info"></div>
+          <div class="col-12 pt-5" id="comments-section"></div>
         </div>
      </div>
   </main>
