Control grafico para realizar comentarios y puntuacion de product-info.html

--- a/product-info.html
+++ b/product-info.html
@@ -43,6 +43,22 @@
           <div class="col-12 col-md-6" id="prod-carrousel"></div>
           <div class="col-12 col-md-6" id="prod-info"></div>
           <div class="col-12 pt-5" id="comments-section"></div>
+          <div class="col-12 col-md-4">
+            <h4 class="h4 mt-1">Comentar</h4>
+            <h6 class="h6 mt-3 mb-3">Tu opinión:</h6>
+            <textarea  cols="80" rows="4" class="form-text" id="comment-product"></textarea>
+            <h6 class="h6 mt-3 mb-3">Tu puntuación:</h6>
+            <select name="simple" id="rate-star" class="form-select w-50">
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+            </select>
+            <button class="btn btn-primary mt-2" id="btn-comment">Enviar</button>
+          
+          
+          </div>
         </div>
      </div>
   </main>
