--- a/product-info.html
+++ b/product-info.html
@@ -46,7 +46,7 @@
           <div class="col-12 col-md-4">
             <h4 class="h4 mt-1">Comentar</h4>
             <h6 class="h6 mt-3 mb-3">Tu opinión:</h6>
-            <textarea  cols="80" rows="4" class="form-text" id="comment-product"></textarea>
+            <textarea class="form-control" id="comment-product" rows="4"></textarea>
             <h6 class="h6 mt-3 mb-3">Tu puntuación:</h6>
             <select name="simple" id="rate-star" class="form-select w-50">
               <option value="1">1</option>
@@ -56,8 +56,6 @@
               <option value="5">5</option>
             </select>
             <button class="btn btn-primary mt-2" id="btn-comment">Enviar</button>
-          
-          
           </div>
         </div>
      </div>
