--- a/product-info.html
+++ b/product-info.html
@@ -43,6 +43,7 @@
           <div class="col-12 col-md-6" id="prod-carrousel"></div>
           <div class="col-12 col-md-6" id="prod-info"></div>
           <div class="col-12 pt-5" id="comments-section"></div>
+          <div class="col-12 pt-5" id="comments-section-new"></div>
           <div class="col-12 col-md-4">
             <h4 class="h4 mt-1">Comentar</h4>
             <h6 class="h6 mt-3 mb-3">Tu opinión:</h6>
