--- a/product-info.html
+++ b/product-info.html
@@ -38,12 +38,12 @@
     </div>
   </nav>
   <main>
-    <div class="container card pt-3 pb-3 mt-3">
+    <div class="container card  ">
         <div class="row card-body">
           <div class="col-12 col-md-6" id="prod-carrousel"></div>
           <div class="col-12 col-md-6" id="prod-info"></div>
           <div class="col-12 pt-5" id="comments-section"></div>
-          <div class="col-12 pt-5" id="comments-section-new"></div>
+          <div class="col-12" id="comments-section-new"></div>
           <div class="col-12 col-md-4">
             <h4 class="h4 mt-1">Comentar</h4>
             <h6 class="h6 mt-3 mb-3">Tu opinión:</h6>
