--- a/sell.html
+++ b/sell.html
@@ -30,7 +30,14 @@
             <a class="nav-link active" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="my-profile.html" id="email"></a>
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle nav-link" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="email"></button>
+              <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                <li><a class="dropdown-item" href="my-profile.html">Mi perfil</a></li>
+                <li><a class="dropdown-item" href="cart.html">Mi carrito</a></li>
+                <li><a class="dropdown-item" id="logout" href="#">Cerrar sesión</a></li>
+              </ul>
+            </div>
           </li>
         </ul>
       </div>
