--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </div>
         </div>
         <div class="row">
-          <a class="btn btn-light btn-lg btn-block" href="categories.html">Y mucho más!</a>
+          <a class="btn btn-dark btn-lg btn-block" href="categories.html">Y mucho más!</a>
         </div>
       </div>
     </div>
