--- a/product-info.html
+++ b/product-info.html
@@ -55,7 +55,7 @@
               <option value="4">4</option>
               <option value="5">5</option>
             </select>
-            <button class="btn btn-primary mt-2" id="btn-comment">Enviar</button>
+            <button class="btn btn-dark mt-2" id="btn-comment">Enviar</button>
           </div>
         </div>
      </div>
