--- a/categories.html
+++ b/categories.html
@@ -21,17 +21,16 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav w-100 justify-content-between">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Inicio</a>
+          <li >
+            <a class="nav-item" href="index.html"><img class="logo" src="icons\logo(190x45px).svg"></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="categories.html">Categorías</a>
+            <a class="nav-link" href="categories.html">Categorías</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item" id="dropmenu">
-            
           </li>
         </ul>
       </div>
