--- a/my-profile.html
+++ b/my-profile.html
@@ -35,8 +35,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav w-100 justify-content-between">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Inicio</a>
+          <li >
+            <a class="nav-item" href="index.html"><img class="logo" src="icons\logo(190x45px).svg"></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="categories.html">Categorías</a>
