Primera actualización, Cards productos relacionados

--- a/product-info.html
+++ b/product-info.html
@@ -58,6 +58,7 @@
             </select>
             <button class="btn btn-primary mt-2" id="btn-comment">Enviar</button>
           </div>
+          <div class="col-12 col-md-4" id="related-products"></div>
         </div>
      </div>
   </main>
