--- a/product-info.html
+++ b/product-info.html
@@ -58,6 +58,7 @@
             <button class="btn btn-dark mt-2" id="btn-comment">Enviar</button>
           </div>
         </div>
+        <div class="col-12 col-md-4" id="related-products"></div>
      </div>
   </main>
   <footer class="text-muted">
