--- a/index.html
+++ b/index.html
@@ -36,8 +36,39 @@
     </div>
   </nav>
   <main>
-    <div class="jumbotron text-center"></div>
-    <div class="album py-5 bg-light">
+   <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"></li>
+        <li data-bs-target="#myCarousel" data-bs-slide-to="1"></li>
+        <li data-bs-target="#myCarousel" data-bs-slide-to="2"></li>
+        <li data-bs-target="#myCarousel" data-bs-slide-to="3"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="img/cover0.png" alt="Cover 0">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/cover1.png" alt="Cover 1">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/cover2.png" alt="Cover 2">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/cover3.png" alt="Cover 3">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#myCarousel" role="button" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#myCarousel" role="button" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </a>
+    </div>
+
+    </div>    
+    <div class="album py-5">
       <div class="container">
         <div class="row">
           <div class="col-md-4">
@@ -77,19 +108,23 @@
       </div>
     </div>
   </main>
-  <footer class="text-muted">
-    <div class="container">
-      <p class="float-end">
-        <a href="#">Volver arriba</a>
-      </p>
-      <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a></p>
-    </div>
-  </footer>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/index.js"></script>
-  <script src="js/init.js"></script>
-  <script src="https://kit.fontawesome.com/11606f83bb.js" crossorigin="anonymous"></script>
-  
+</div>
+</div>
+</div>
+</main>
+<footer class="text-muted">
+<div class="container">
+<p class="float-end">
+  <a href="#">Volver arriba</a>
+</p>
+<p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a></p>
+</div>
+</footer>
+<script src="js/bootstrap.bundle.min.js"></script>
+<script src="js/index.js"></script>
+<script src="js/init.js"></script>
+<script src="https://kit.fontawesome.com/11606f83bb.js" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
