--- a/index.html
+++ b/index.html
@@ -36,7 +36,32 @@
     </div>
   </nav>
   <main>
-    <div class="jumbotron text-center"></div>
+    <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="img/cover0.png" alt="Cover 0">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/cover1.png" alt="Cover 1">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/cover2.png" alt="Cover 2">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/cover3.png" alt="Cover 3">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#myCarousel" role="button" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#myCarousel" role="button" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </a>
+    </div>
+    
+  
     <div class="album py-5">
       <div class="container">
         <div class="row">
