--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
   <main>
     <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
+        <ol class="carousel-indicators">
+          <li data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"></li>
+          <li data-bs-target="#myCarousel" data-bs-slide-to="1"></li>
+          <li data-bs-target="#myCarousel" data-bs-slide-to="2"></li>
+          <li data-bs-target="#myCarousel" data-bs-slide-to="3"></li>
+        </ol>
         <div class="carousel-item active">
           <img class="d-block w-100" src="img/cover0.png" alt="Cover 0">
         </div>
