--- a/product-info.html
+++ b/product-info.html
@@ -46,7 +46,7 @@
   </nav>
 
   <main>
-    <div class="container card  ">
+    <div class="container card py-4">
         <div class="row card-body">
           <div class="col-12 col-md-6" id="prod-carrousel"></div>
           <div class="col-12 col-md-6 py-4" id="prod-info"></div>
