--- a/products.html
+++ b/products.html
@@ -51,47 +51,52 @@
       <h2>Productos</h2>
       <p class="lead">Verás aquí todos los producto de la categoria <span id="category-name"></span> </p>
     </div>
+
     <div class="container">
       <div class="row">
-        <div class="col text-end">
-          <div class="btn-group btn-group-toggle mb-4" data-bs-toggle="buttons">
-            <input type="radio" class="btn-check" name="options" id="MenorAMayor">
-            <label class="btn btn-light" for="MenorAMayor"><i class="fas fa-sort-amount-down mr-1"></i>$</label>
-            <input type="radio" class="btn-check" name="options" id="MayorAMenor">
-            <label class="btn btn-light" for="MayorAMenor"><i class="fas fa-sort-amount-up mr-1"></i>$</label>
-            <input type="radio" class="btn-check" name="options" id="porCantidad" checked>
-            <label class="btn btn-light" for="porCantidad"><i class="fas fa-sort-amount-down mr-1"></i>Rel.</label>
+
+          <div class="col-md-6 py-2">
+            <input class="form-control" type="search" placeholder="Buscar..." id="searchInput">
           </div>
-        </div>
-        <div class="row pt-2 pb-2">
-          <div class="col-12 col-md-5">
+
+          <div class="col-12 col-md-6 py-2">
             <div class="row">
-              <div class="col-8 col-md-8">
-                <input class="form-control" type="search" placeholder="Buscar..." id="searchInput">
-              </div>
+                <div class="col-6 col-md-6">
+                  <input class="form-control" min="0" type="number" placeholder="min." id="filtroRangoMin">
+                </div>
+                <div class="col-6 col-md-6">
+                  <input class="form-control" min="0" type="number" placeholder="máx." id="filtroRangoMax">
+                </div>
             </div>
           </div>
-          <div class="col-12 col-md-7">
-            <div class="row">
-              <div class="col-2 col-md-1">
-                <p class="font-weight-normal text-end my-2">Cant.</p>
-              </div>
-              <div class="col-5 col-md-3">
-                <input class="form-control" min="0" type="number" placeholder="min." id="filtroRangoMin">
-              </div>
-              <div class="col-5 col-md-3">
-                <input class="form-control" min="0" type="number" placeholder="máx." id="filtroRangoMax">
-              </div>
           
-              <div class="col-12 col-md-5">
-                <div class="btn-group" role="group">
-                  <button class="btn btn-outline-dark" id="filtroRango">Filtrar</button>
-                  <button class="btn btn-outline-dark" id="limpiarFiltroRango">Limpiar</button>
+        <div class="col-12 py-2">
+          <div class="row">
+            <div class="col-0 col-md-6"></div>
+            <div class="col-6 col-md-3">
+              <div class="btn-group" role="group">
+                <button class="btn btn-outline-dark" id="filtroRango">Filtrar</button>
+                <button class="btn btn-outline-dark" id="limpiarFiltroRango">Limpiar</button>
+              </div>
+            </div>
+
+            <div class="col-6 col-md-3">
+              <div class="btn-group btn-group-toggle mb-4" data-bs-toggle="buttons">
+                <input type="radio" class="btn-check" name="options" id="MenorAMayor">
+                <label class="btn btn-outline-dark" for="MenorAMayor"><i class="fas fa-sort-amount-down mr-1"></i>$</label>
+                <input type="radio" class="btn-check" name="options" id="MayorAMenor">
+                <label class="btn btn-outline-dark" for="MayorAMenor"><i class="fas fa-sort-amount-up mr-1"></i>$</label>
+                <input type="radio" class="btn-check" name="options" id="porCantidad" checked>
+                <label class="btn btn-outline-dark" for="porCantidad"><i class="fas fa-sort-amount-down mr-1"></i></label>
                 </div>
               </div>
             </div>
           </div>
         </div>
+      </div>
+    </div>
+
+
     <div class="container">
       <div class="row">
         <div class="list-group" id="products-list-container">
