--- a/cart.html
+++ b/cart.html
@@ -67,7 +67,10 @@
             </tbody>
           </table>
         </div>
-
+        
+        <div class="container">
+          <div class="row">
+              <div class="col-md-6">
         <div class="text-start">
           <p class="lead">Tipo de Envío:</p>
           <div class="form-check">
@@ -105,9 +108,9 @@
             <input type="text" class="form-control" id="esquina" placeholder="Ingresa la esquina">
           </div>
         </div>
+      </div>
 
-        <hr>
-
+        <div class="col-md-6">
         <div class="container">
           <p class="lead">Costos</p>
           <div class="form-control">
@@ -141,10 +144,8 @@
           </div>
         </div>
 
-          <hr>
-
           <div class="container">
-            <p class="lead">Forma de pago</p>
+            <p class="lead mt-3">Forma de pago</p>
             <div class="row">
                 <div class="col-12 col-md-2">
                     <p id="selectedPaymentText">No ha seleccionado</p>
@@ -211,6 +212,9 @@
               </div>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
 
     </div>
   </main>
