Corrección de textos

--- a/cart.html
+++ b/cart.html
@@ -117,7 +117,7 @@
             <div class="row">
               <div class="col-8 text-muted">
                 <h5>Subtotal</h5>
-                <p>costo unitario del producto por cantidad</p>
+                <p>Costo unitario del producto por cantidad</p>
               </div>
               <div class="col-4 text-muted text-end" id="subTotalFinal">
               </div>
@@ -127,7 +127,7 @@
             <div class="row">
               <div class="col-8 text-muted">
                 <h5>Costo de envio</h5>
-                <p>segun el tipo de envio</p>
+                <p>Segun el tipo de envio</p>
               </div>
               <div class="col-4 text-muted text-end" id="costoEnvio">
               </div>
