--- a/cart.html
+++ b/cart.html
@@ -193,7 +193,7 @@
                                 </div>
                                 <div class="col-md-7 py-1">
                                   <label for="expirationDate">Vencimiento (MM/AA):</label>
-                                  <input type="text" id="expirationDate" class="form-control py-2 payment-field" pattern="\d{2}/\d{2}">
+                                  <input type="date" id="expirationDate" class="form-control py-2 payment-field" pattern="\d{2}/\d{2}">
                                 </div>
                               </div>
                             </div>
