Se agregan las validaciones de los campos del perfil de usuario, primera version

--- a/my-profile.html
+++ b/my-profile.html
@@ -91,17 +91,17 @@
         </div>
         <div class="row mb-5">
           <div class="col-6">
-            <label for="profilemail" class="form-group p-1">E-mail</label>
+            <label for="profilemail" class="form-group p-1">E-mail*</label>
             <input type="text" name="" id="profilemail" class="form-control">
           </div>
           <div class="col-6">
-            <label for="profiletel" class="form-group p-1 d-none d-md-block">Telefono de contacto*</label>
+            <label for="profiletel" class="form-group p-1 d-none d-md-block">Telefono de contacto</label>
             <label for="profiletel" class="form-group p-1 d-md-none d-sm-block">Telefono*</label>
             <input type="text" name="" id="profiletel" class="form-control">
           </div>
         </div>
       </div>
-      <button class="btn btn-primary mt-3" type="button">Guardar cambios</button>
+      <button id="guardarDatos" class="btn btn-primary mt-3" type="button">Guardar cambios</button>
     </div>
   </main>
   <footer class="text-muted">
