--- a/login.html
+++ b/login.html
@@ -135,7 +135,7 @@
             <h3><b>Crear cuenta</b></h3>
              <div class="form-input">
                 <div class="form-group py-2 w-75">
-                  <input type="text" name="nombre" class="form-control w-75 centrar" placeholder="" required>
+                  <input type="text" name="nombre" id="register-name" class="form-control w-75 centrar" placeholder="" required>
                   <label class="placeholder-label">¿Nombre?</label>
                 </div>
                 <div class="form-group py-2 w-75">
