se agrega imagen

--- a/my-profile.html
+++ b/my-profile.html
@@ -29,6 +29,19 @@
       width: 100%;
       bottom:0;
     }
+
+    .image-container {
+      position: fixed;
+      top: 0;
+      right: 0;
+      padding: 15px;
+      text-align: center;
+    }
+
+    #profileimage-preview {
+      max-width: 100px;
+      max-height: 100px;
+    }
   </style>
 </head>
 
@@ -65,9 +78,16 @@
     </div>
   </nav>
 
-    <div class="container">
+  <div class="container mt-4">
+    <div class="row">
+      <div class="col-md-6">
       <h2 class="mt-4 mb-5">Perfil</h2>
-      <div class="border-top border-bottom p-1 pb-5" style="height: 40vh;">
+      </div>
+      <div class="col-md-6 text-right">
+      <img id="profileimage-preview" src="img/img_perfil.png" class="rounded" alt="Imagen de perfil" >
+    </div>
+    </div>
+      <div class="border-top border-bottom p-1 pb-5" style="height: 44vh;">
         <div class="row mt-3">
           <div class="col-6">
             <label for="profilename1" class="form-group p-1">Primer Nombre*</label>
@@ -93,6 +113,10 @@
           <div class="col-6">
             <label for="profilemail" class="form-group p-1">E-mail*</label>
             <input type="text" name="" id="profilemail" class="form-control">
+          </div>
+          <div class="col-6">
+            <label for="profileimage" class="form-group p-1">Imagen de perfil</label>
+            <input type="file" name="" id="profileimage" class="form-control" accept="image/">
           </div>
           <div class="col-6">
             <label for="profiletel" class="form-group p-1 d-none d-md-block">Telefono de contacto</label>
