--- a/my-profile.html
+++ b/my-profile.html
@@ -8,6 +8,9 @@
   <link rel="shortcut icon" href="icons\singleIcon.png">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
   <link href="css/styles.css" rel="stylesheet">
   <style>
     .bd-placeholder-img {
@@ -61,13 +64,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav w-100 justify-content-between align-items-center">
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html">Inicio</a>
+                  <a class="nav-link" href="index.html"><i class="bi bi-house-door"></i>&nbsp;Inicio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="categories.html">Categorías</a>
+                  <a class="nav-link" href="categories.html"><i class="bi bi-bookmark"></i></i>&nbsp;Categorías</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="sell.html">Vender</a>
+                  <a class="nav-link" href="sell.html"><i class="bi bi-cash-coin">&nbsp;</i>Vender</a>
                 </li>
                 <li class="nav-item" id="dropmenu"></li>
               </ul>
@@ -81,7 +84,7 @@
   <div class="container mt-4">
     <div class="row">
       <div class="col-md-6">
-      <h2 class="mt-4 mb-5">Perfil</h2>
+      <h2 class="mt-4 mb-5"><i class="bi bi-person-lines-fill">&nbsp;</i>Perfil</h2>
       </div>
       <div class="col-md-6 text-right">
       <img id="profileimage-preview" src="img/img_perfil.png" class="rounded" alt="Imagen de perfil" >
@@ -125,7 +128,7 @@
           </div>
         </div>
       </div>
-      <button id="guardarDatos" class="btn btn-primary mt-3" type="button">Guardar cambios</button>
+      <button id="guardarDatos" class="btn btn-success mt-3" type="button">Guardar cambios</button>
     </div>
   </main>
   <footer class="text-muted">
