--- a/product-info.html
+++ b/product-info.html
@@ -9,6 +9,9 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
   <link href="css/styles.css" rel="stylesheet">
 </head>
 
@@ -28,13 +31,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav w-100 justify-content-between align-items-center">
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html">Inicio</a>
+                  <a class="nav-link" href="index.html"><i class="bi bi-house-door"></i>&nbsp;Inicio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="categories.html">Categorías</a>
+                  <a class="nav-link" href="categories.html"><i class="bi bi-bookmark"></i></i>&nbsp;Categorías</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="sell.html">Vender</a>
+                  <a class="nav-link" href="sell.html"><i class="bi bi-cash-coin">&nbsp;</i>Vender</a>
                 </li>
                 <li class="nav-item" id="dropmenu"></li>
               </ul>
@@ -59,13 +62,13 @@
             <h6 class="h6 mt-3 mb-3">Tu puntuación:</h6>
             <div class="form-floating">
               <input type="range" class="rating" id="stars" min="1" max="5" placeholder="1" value="1"
-                  oninput="this.style.setProperty('--value', this.value)">
+                  oninput="this.style.setProperty('--value', this.value)" style="cursor: pointer;">
               <!--<label for="stars">Rating</label>-->
           </div>
             <button class="btn btn-dark mt-2" id="btn-comment">Enviar</button>
           </div>
           <div class="col-1"></div>
-          <div class="col-12 col-md-7 py-4 px-4" id="related-products"></div>
+          <div class="col-12 col-md-7 py-4 px-4" id="related-products" style="cursor: pointer;"></div>
         </div>
      </div>
   </main>
