--- a/sell.html
+++ b/sell.html
@@ -8,42 +8,53 @@
   <link rel="shortcut icon" href="icons\singleIcon.png">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
   <link href="css/dropzone.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
-    <div class="container">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav w-100 justify-content-between">
-          <li >
-            <a class="nav-item" href="index.html"><img class="logo" src="icons\logo(190x45px).svg"></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="categories.html">Categorías</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="sell.html">Vender</a>
-          </li>
-          <li class="nav-item" id="dropmenu">
-          </li>
-        </ul>
+    <div class="col-12">
+      <div class="row">
+        <div class="col-8 col-lg-2">
+          <a class="logoItem" href="index.html"><img class="logo" src="icons\logo(190x45px).svg"></a>
+        </div>
+        <div class="col-2 col-lg-10">
+          <div class="container">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav w-100 justify-content-between align-items-center">
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html"><i class="bi bi-house-door"></i>&nbsp;Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="categories.html"><i class="bi bi-bookmark"></i></i>&nbsp;Categorías</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="sell.html"><i class="bi bi-cash-coin">&nbsp;</i>Vender</a>
+                </li>
+                <li class="nav-item" id="dropmenu"></li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </nav>
   <div class="container">
     <div class="text-center p-4">
-      <h2>Vender</h2>
+      <h2><i class="bi bi-clipboard2-plus"></i>&nbsp;Vender</h2>
       <p class="lead">Ingresa los datos del artículo a vender.</p>
     </div>
     <div class="row justify-content-md-center">
       <div class="col-md-8 order-md-1">
-        <h4 class="mb-3">Información del producto</h4>
+        <h4 class="mb-3"><i class="bi bi-info-square"></i>&nbsp;Información del producto</h4>
         <form class="needs-validation" id="sell-info">
           <div class="row">
             <div class="col-md-6 mb-3">
@@ -135,13 +146,13 @@
               <label class="custom-control-label" for="standardradio">Estándar (3%)</label>
             </div>
             <div class="row">
-              <button type="button" class="m-1 btn btn-link" data-bs-toggle="modal"
+              <button type="button" class="m-1 btn btn-secondary" data-bs-toggle="modal"
                 data-bs-target="#contidionsModal">Ver
                 condiciones</button>
             </div>
           </div>
           <hr class="mb-4">
-          <h4 class="mb-3">Costos</h4>
+          <h4 class="mb-3"><i class="bi bi-coin"></i>&nbsp;Costos</h4>
           <ul class="list-group mb-3">
             <li class="list-group-item d-flex justify-content-between lh-condensed">
               <div>
@@ -163,7 +174,7 @@
             </li>
           </ul>
           <hr class="mb-4">
-          <button class="btn btn-primary btn-lg" type="submit">Vender</button>
+          <button class="btn btn-success btn-lg" type="submit">Vender</button>
         </form>
       </div>
     </div>
@@ -209,7 +220,7 @@
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
+          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
         </div>
       </div>
     </div>
